# flora

./: .env.example  .gitignore  .prettierrc  ARCHITECTURE.md  ATLAS_MASTER_EXECUTION.md  ATLAS_VISION.md  CLAUDE.md  MASTER.md  NEXT_TASK.md  NIGHTLY_RUNNER.md  PRODUCT_ARCHITECTURE.md  PROJECT_AUDIT.md  TODAY_REPORT.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: cache.py  config.py  deps.py  errors.py  logging.py  middleware.py  response.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/engine/: __init__.py  changelog.py  cli.py  core.py  models.py  roadmap.py  scanner.py
apps/api/app/models/: __init__.py  agent.py  collection.py  insight.py  knowledge.py  learning.py  memory.py  project.py  source.py  stock.py  tag.py  task.py  thread.py  user.py  workspace.py
apps/api/app/repositories/: __init__.py  base.py  memory.py  project.py  task.py  user.py  workspace.py
apps/api/app/schemas/: agent.py  auth.py  insight.py  memory.py  project.py  search.py  source.py  task.py  thread.py  workspace.py
apps/api/app/services/: agent_service.py  ai.py  embedding.py  ingestion.py  learning_service.py  memory_engine.py  memory_service.py  search.py  stock_service.py  storage.py  task_service.py
apps/api/app/tasks/: agent_tasks.py  celery_app.py  engine_task.py  ingestion.py  knowledge_tasks.py  learning_tasks.py  memory_tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 1d806e29bd96_add_learning_jobs_table.py  7314356adf4a_add_memories_table.py  a5132c7dcdb9_initial_schema.py  af57b2ca30bf_add_tasks_table.py  (+5 more)
(+117 files in other folders)
