[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flora-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.5",

    # Cache / Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",

    # AI — OpenAI is the default provider (Responses API)
    "openai>=1.56.0",
    "voyageai>=0.3.2",
    # "anthropic>=0.40.0",  # uncomment to enable Anthropic provider

    # Document processing
    "pymupdf>=1.24.12",
    "trafilatura>=1.12.2",
    "yt-dlp>=2024.11.18",
    "langchain-text-splitters>=0.3.2",
    "feedparser>=6.0.11",
    "youtube-transcript-api>=0.6.3",

    # Utilities
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "python-slugify>=8.0.4",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
